Fixed menu z-index on load

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 $color-black: #090909;
 $color-white: #ffffff;
 
-$color-blue: #0079b6;
+$color-blue: #61caff;
 
 // SPACING
 $space-huge: 8rem;
